# AI--Neural-Network-in-c

include/: activation_function.h  creat_mini_batch.h  display_struct.h  forward_pass.h  mnist.h  struct.h
src/: CMakeLists.txt  activation_function.c  compile_and_run.sh  display_struct.c  function.c  function.h  main.c  makefile  struct.c  struct.h  weight_function.c  weight_function.h
src/activation_fonction/: activation_function.c  makefile
src/affichage/: display_struct.c  makefile
src/application/: application.c  makefile
src/fichier_open_gl/: main_opgl.c
src/passe_en_avant/: forward_pass.c  makefile
src/structures/: makefile  struct.c
src/traitement_data/: Makefile  creat_mini_batch.c  example.c
traitement_data/: Makefile  data_extract.c  example.c  visu_fichier.py
